# DafLanguage

./: .gitignore  ExampleFile.daf  README.md  daf.vim
cppCode/SmithGame/: CMakeLists.txt  HowIUseCMake.txt  SmithGame.cbp  SmithGame.depend  SmithGame.layout  SmithGame.layout.orig  SmithGame.sln  SmithGame.vcxproj  SmithGame.vcxproj.filters  packages.config
dafCode/: DartGame.daf  DartPlayer.daf  DartScoreMain.daf  Game.daf  GameWindow.daf  Player.daf  WindowLib.daf
dafCode/procedural/: Main.daf
experiments/: .main2.daf.swp  caveGame.daf  classesNStuff.daf  findingPrimes.daf  guessingGame.daf  main.daf  main.daf~  main2.daf  main2.daf~  main3.daf  main4.daf  pointers.daf  pointersAndArrays.daf  referenceTests.daf  roomGameMain.daf  useOfStuff.daf
experiments/gameLib/: window.daf
experiments/newer/: caveGame.daf  classesNStuff.daf
javaCode/.metadata/: version.ini
oldStuff/cppCode/SmithGame/: CMakeLists.txt  HowIUseCMake.txt
oldStuff/cppCode/SmithGame/res/mesh/: Cube.plybin11  Tree9.plybin11
oldStuff/cppCode/SmithGame/res/mesh/ply/: Cube.ply  Terrain.ply  Tree9.blend  cube.blend1
oldStuff/cppCode/SmithGame/res/shader/: BasicShader.fs  BasicShader.vs  BasicShader120.vs
oldStuff/cppCode/SmithGame/src/: FPSCounter.h  GameWindow.h
oldStuff/cppCode/SmithGame/src/asset/: AssetSystem.h
oldStuff/cppCode/SmithGame/src/game/: TestComponent.cpp  TestComponent.h
oldStuff/cppCode/SmithGame/src/rendering/: Mesh.h  MeshRaw.cpp  MeshRaw.h  Shader.cpp  Texture.h  Vertex.h
oldStuff/cppCode/SmithGame/src/scene/: GameComponent.h  GameObject.cpp  Scene.cpp  Scene.h
(+95 files in other folders)
